# study-of-opencv

./: README.md
tests/contrast/: CMakeLists.txt
tests/contrast/src/: main.cpp
tests/countours/: CMakeLists.txt
tests/countours/src/: main.cpp
tests/false-colors/: CMakeLists.txt
tests/find_barcode/: CMakeLists.txt
tests/find_barcode/src/: main.cpp  matcher.cpp  matcher.cpp.autosave  matcher.h
tests/hello_opencv/: CMakeLists.txt
tests/hello_opencv/src/: main.cpp
tests/image-blending/: CMakeLists.txt
tests/image-blending/src/: main.cpp
tests/ip_camera/: CMakeLists.txt
tests/ip_camera/src/: main.cpp
tests/objects-size/: CMakeLists.txt
tests/objects-size/src/: main.cpp
tests/opencl/: CMakeLists.txt  toolchain.cmake
tests/opencl/src/: main.cpp
tests/people-finder/: CMakeLists.txt
tests/segmentation/: CMakeLists.txt
tests/segmentation/src/: main.cpp
tests/segments-objects/: CMakeLists.txt
tests/segments-objects/src/: main.cpp
tests/thresholding/: CMakeLists.txt
tests/thresholding/src/: main.cpp
tests/video/: CMakeLists.txt
tests/video/src/: main.cpp
